home-cluster/media/readarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
    spec:
      containers:
      - name: readarr
        image: linuxserver/readarr:0.4.19-nightly
        ports:
        - containerPort: 8787
          protocol: TCP
        volumeMounts:
        - name: readarr-config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        - name: books
          mountPath: /media
      volumes:
      - name: readarr-config
        persistentVolumeClaim:
          claimName: readarr-config
      - name: downloads
        hostPath:
          path: /mnt/nas/torrents/Downloads
          type: Directory
      - name: books
        hostPath:
          path: /mnt/nas/books
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: media
spec:
  selector:
    app: readarr
  ports:
  - port: 8787
    targetPort: 8787
    protocol: TCP
  type: ClusterIP
