home-cluster/media/ingress-lidarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: caddy
    external-dns.alpha.kubernetes.io/hostname: lidarr.kube.stevearnett.com
    external-dns.alpha.kubernetes.io/target: kube.stevearnett.com
spec:
  tls:
  - hosts:
    - lidarr.kube.stevearnett.com
    secretName: wildcard-stevearnett-com-tls
  rules:
  - host: lidarr.kube.stevearnett.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lidarr
            port:
              number: 8686
