home-cluster/media/ingress-radarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: caddy
    external-dns.alpha.kubernetes.io/hostname: radarr.kube.stevearnett.com
    external-dns.alpha.kubernetes.io/target: kube.stevearnett.com
spec:
  tls:
  - hosts:
    - radarr.kube.stevearnett.com
    secretName: wildcard-stevearnett-com-tls
  rules:
  - host: radarr.kube.stevearnett.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878
