home-cluster/media/ingress-sonarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: caddy
    external-dns.alpha.kubernetes.io/hostname: sonarr.kube.stevearnett.com
    external-dns.alpha.kubernetes.io/target: kube.stevearnett.com
spec:
  tls:
  - hosts:
    - sonarr.kube.stevearnett.com
    secretName: wildcard-stevearnett-com-tls
  rules:
  - host: sonarr.kube.stevearnett.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989
