home-cluster/media/ingressroute-jellyfin.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: media.kube.stevearnett.com
    external-dns.alpha.kubernetes.io/target: kube.stevearnett.com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`media.kube.stevearnett.com`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls: {}
