home-cluster/media/ingressroute-lidarr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lidarr.kube.stevearnett.com`)
      kind: Rule
      services:
        - name: lidarr
          port: 8686
