home-cluster/media/ingressroute-prowlarr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.kube.stevearnett.com`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
