home-cluster/media/ingressroute-radarr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.kube.stevearnett.com`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
