home-cluster/media/ingressroute-seerr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`overseerr.kube.stevearnett.com`)
      kind: Rule
      services:
        - name: seerr
          port: 5055
