home-cluster/media/ingressroute-sonarr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.kube.stevearnett.com`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
