home-cluster/media/overseerr.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/hostname: overseerr.kube.stevearnett.com
    external-dns.alpha.kubernetes.io/target: kube.stevearnett.com
spec:
  tls:
  - hosts:
    - overseerr.kube.stevearnett.com
    secretName: wildcard-stevearnett-com-tls
  rules:
  - host: overseerr.kube.stevearnett.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: overseerr
            port:
              number: 5055
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
      - name: overseerr
        image: sctx/overseerr:latest
        ports:
        - containerPort: 5055
          protocol: TCP
        volumeMounts:
        - name: overseerr-config
          mountPath: /app/config
      volumes:
      - name: overseerr-config
        persistentVolumeClaim:
          claimName: overseerr-config
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: media
spec:
  selector:
    app: overseerr
  ports:
  - port: 5055
    targetPort: 5055
    protocol: TCP
  type: ClusterIP
